internal/octogo/testdata/23_pointer_ops.ogo
func testPointers() {
	var val int = 42

	// Valid: taking the address
	var ptr *int = &val

	// Valid: dereferencing
	var deref int = *ptr

	// ERROR "invalid operation|cannot indirect|invalid indirect"
	var invalidDeref int = *val

	// ERROR "invalid operation|operator \+ not defined for pointer"
	var badMath *int = ptr + 1
}
